# energy-adc-service

./: .gitmodules  README.md  integration_instructions.md
docs/api_docs/: adc_service_doxy_config  adc_service_doxygen_introduction.h
docs/release_notes/: 0.9.0.md  1.0.0.md  index.md
eval_firmware/ace_firmware/: CMakeLists.txt  CMakePresets.json  CommonPresets.json  ace_firmware.code-workspace  ace_plugin_users_guide.md  readme.md
eval_firmware/ace_firmware/config/: adc_datapath_cfg.h  app_cfg.h
eval_firmware/include/: adc_example.h  adc_example_attributes.h  adc_example_freertos.h  adc_example_freertos_config.h  adc_example_iio.h  adc_example_tdm.h  cli_commands.h
eval_firmware/source/: adc_example_attributes.c  adc_example_cli_commands.c  adc_example_freertos.c  adc_example_freertos_config.c  adc_example_iio.c  adc_example_no_os_config.c  adc_example_tdm.c  adc_example_test_cmd.c  cli_commands.c  main.c  main_freertos.c
examples/: readme.md  sample_read_example.c
examples/projects/: CMakeLists.txt  CMakePresets.json  sample_read_example.code-workspace
examples/projects/config/: adc_datapath_cfg.h  app_cfg.h
include/: adc_config_ade91xx.h  adc_config_adema12x.h  adc_datapath_configure.h  adc_private.h  adc_sync.h  adi_adc.h  adi_adc_dsp.h  adi_adc_frame_assemble.h  adi_adc_memory.h  adi_adc_version.h
interface/include/: adc_service_adapter.h  adc_service_dsp_interface.h  adc_service_interface.h
interface/source/: adc_service_adapter.c  adc_service_dsp_interface.c  adc_service_interface.c
source/: CMakeLists.txt  adc_config_ade91xx.c  adc_config_adema12x.c  adc_configure.c  adc_datapath_configure.c  adc_private.c  adc_read_write.c  adc_sync.c  adi_adc.c  adi_adc_dsp.c  adi_adc_frame_assemble.c  adi_adc_utility.c
